# jit.rec

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  single-docker-compose.yml
.github/workflows/: publish_docker_image.yml
backend/: .flake8  .gitignore  Dockerfile  manage.py  pyproject.toml  run_single_docker.py
backend/dashboard/: apps.py  models.py  serializers.py  urls.py  views.py
backend/dashboard/migrations/: 0001_initial.py  0002_initial.py  0002_recording_token.py
backend/jit_rec_auth/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/jit_rec_auth/fixtures/: users.json
backend/jit_rec_auth/migrations/: 0001_initial.py  0002_cerate_defult_user.py
backend/jit_rec_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/recorder/: tcp.py
backend/rtmp_recorder/: application.py  apps.py  rtmp.py  security.py
backend/rtmp_recorder/management/commands/: run_rtmp_server.py
backend/rtmp_recorder/rtmp_services/: flv_file.py  rtmp_server.py  tcp_server.py
env/: dev.env  prod.example.env  single-docker.env  single-docker.example.env
frontend/: .eslintrc.json  .gitignore  .prettierrc  Dockerfile  Dockerfile.dev  env_config_template.js  generate_env_config.sh  nginx.conf  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js  utils.js
nginx/: http-single-docker.conf  http.conf  nginx.conf
nginx/config/: default.conf.template  frontend.conf.template  webservice.conf.template
nginx/templates/: frontend-single-docker.conf.template  (+3 more)
(+26 files in other folders)
